[gd_scene load_steps=17 format=3 uid="uid://djtbjhxfeatlt"]

[ext_resource type="Script" uid="uid://87tq8gbnme6t" path="res://Assets/幻乡/战斗场景/封尘的噬咒碑/石碑炮台炸弹.gd" id="1_o0183"]
[ext_resource type="Texture2D" uid="uid://crhdc0r808orl" path="res://Assets/幻乡/战斗场景/封尘的噬咒碑/炮台弹幕-Sheet.png" id="2_o0183"]
[ext_resource type="Script" uid="uid://c5t2k5iju844x" path="res://Assets/幻乡/战斗场景/封尘的噬咒碑/子弹轨迹line_2d.gd" id="3_o0183"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ox3bj"]
atlas = ExtResource("2_o0183")
region = Rect2(378, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0183"]
atlas = ExtResource("2_o0183")
region = Rect2(0, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0awsf"]
atlas = ExtResource("2_o0183")
region = Rect2(63, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1r3"]
atlas = ExtResource("2_o0183")
region = Rect2(126, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0l7l"]
atlas = ExtResource("2_o0183")
region = Rect2(189, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou4nb"]
atlas = ExtResource("2_o0183")
region = Rect2(252, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xypaw"]
atlas = ExtResource("2_o0183")
region = Rect2(315, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amdtt"]
atlas = ExtResource("2_o0183")
region = Rect2(378, 0, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8go3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox3bj")
}],
"loop": false,
"name": &"Exploding",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0183")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0awsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0l7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou4nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xypaw")
}],
"loop": true,
"name": &"Flying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amdtt")
}],
"loop": false,
"name": &"Ready",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_os6bg"]
radius = 21.0238

[sub_resource type="Curve" id="Curve_othyj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.205798, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wqcv7"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.196078)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuc7o"]
size = Vector2(40, 1308)

[node name="石碑炮台炸弹" type="Area2D"]
script = ExtResource("1_o0183")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8go3c")
animation = &"Exploding"
autoplay = "Ready"
frame_progress = 1.0
offset = Vector2(-1.33333, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_os6bg")

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width = 20.0
width_curve = SubResource("Curve_othyj")
default_color = Color(0.858362, 0.422143, 1.92523e-07, 1)
gradient = SubResource("Gradient_wqcv7")
script = ExtResource("3_o0183")

[node name="AttackCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCheck"]
position = Vector2(4, -629)
shape = SubResource("RectangleShape2D_uuc7o")

[node name="FlyingTime" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="FlyingTime" to="." method="_on_flying_time_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
